--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,8 @@
 YALIDINE_API_ID=
 YALIDINE_API_TOKEN=
 
+# Optionnel : clé secrète pour la validation du webhook (crc_token). Si vide, utilise YALIDINE_API_TOKEN.
+# YALIDINE_WEBHOOK_SECRET=
+
 # Optionnel : port du serveur proxy (défaut 3001)
 # PORT=3001
