Webhook: réponses crc_token + response_token, urlencoded, option USE_API_ID
Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ YALIDINE_API_TOKEN=
 
 # Optionnel : clé secrète pour la validation du webhook (crc_token). Si vide, utilise YALIDINE_API_TOKEN.
 # YALIDINE_WEBHOOK_SECRET=
+# Si la validation échoue, essayer avec l'API ID comme secret : YALIDINE_WEBHOOK_USE_API_ID=true
 
 # Optionnel : port du serveur proxy (défaut 3001)
 # PORT=3001
