PostgreSQL, landing pages, page produit type Shopify, choix iPhone/couleur obligatoire, fix JSX ProductsStep
Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
-# Copiez ce fichier en .env et renseignez vos identifiants Yalidine.
-# Le serveur proxy (npm run server) utilisera ces variables pour appeler l'API Yalidine.
+# Copiez ce fichier en .env et renseignez vos identifiants.
+# Le serveur (npm run server) utilisera ces variables.
+
+# Base de données partagée (PostgreSQL). Sans cette variable, les données sont en mémoire (perdues au redémarrage).
+# Format : postgres://USER:MOT_DE_PASSE@HOST:PORT/NOM_BDD
+# Exemple local : postgres://postgres:monmotdepasse@localhost:5432/protecphone
+# DATABASE_URL=
 
 YALIDINE_API_ID=
 YALIDINE_API_TOKEN=
