feat: intégration Facebook Pixel (PageView, ViewContent, AddToCart, InitiateCheckout, Purchase)
Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@
 # Base de données partagée (PostgreSQL). Sans cette variable, les données sont en mémoire (perdues au redémarrage).
 # Format : postgres://USER:MOT_DE_PASSE@HOST:PORT/NOM_BDD
 # Exemple local : postgres://postgres:monmotdepasse@localhost:5432/protecphone
+
 # DATABASE_URL=
 
 YALIDINE_API_ID=
@@ -15,3 +16,8 @@ YALIDINE_API_TOKEN=
 
 # Optionnel : port du serveur proxy (défaut 3001)
 # PORT=3001
+
+# --- Variables pour le build frontend (Vite) ---
+# Facebook / Meta Pixel (pour Facebook Ads). Si défini, le pixel sera chargé et les événements envoyés (PageView, ViewContent, AddToCart, InitiateCheckout, Purchase).
+# Récupérez l’ID dans Facebook Business Suite → Paramètres du site → Données → Pixels.
+# VITE_FB_PIXEL_ID=
