feat: WhatsApp confirmation commande (Twilio) + webhook confirmation client + docs Quick Reply/List Picker + logs
Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,15 @@
 YALIDINE_API_ID=
 YALIDINE_API_TOKEN=
 
+# WhatsApp : envoi automatique d’un message de confirmation au client après chaque commande (via Twilio).
+# Créez un compte sur twilio.com, activez WhatsApp (Sandbox pour test ou numéro WhatsApp Business).
+# TWILIO_ACCOUNT_SID=
+# TWILIO_AUTH_TOKEN=
+# TWILIO_WHATSAPP_FROM=whatsapp:+14155238886
+# Pour la prod avec un numéro Algérie : TWILIO_WHATSAPP_FROM=whatsapp:+213XXXXXXXXX
+# Template (recommandé pour messages business) : voir docs/WHATSAPP_TWILIO.md pour créer le template.
+# TWILIO_WHATSAPP_CONTENT_SID=HXxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
 # Optionnel : clé secrète pour la validation du webhook (crc_token). Si vide, utilise YALIDINE_API_TOKEN.
 # YALIDINE_WEBHOOK_SECRET=
 # Si la validation échoue, essayer avec l'API ID comme secret : YALIDINE_WEBHOOK_USE_API_ID=true
